--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_API_URL=https://your-backend-url.com/api
 VITE_EMAILJS_SERVICE_ID=service_vdgz8up
 VITE_EMAILJS_TEMPLATE_ID=template_ng9kuh7
 VITE_EMAILJS_PUBLIC_KEY=h2TG_VcRQogyVMXix
+VITE_RECAPTCHA_SITE_KEY=6Lc1i2IsAAAAAHMblgJewKAu_YyIUqNgRSLAfm7k
