Production redeploy fix

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=https://myportfolio_backend.com/api
+VITE_API_URL=https://myportfolio-backend-nic8.onrender.com/api
 VITE_EMAILJS_SERVICE_ID=service_vdgz8up
 VITE_EMAILJS_TEMPLATE_ID=template_ng9kuh7
 VITE_EMAILJS_PUBLIC_KEY=h2TG_VcRQogyVMXix
